--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -11,7 +11,7 @@ import { SponsorList } from "@site/src/components/SponsorList";
 # Open WebUI
 
 
-**Open WebUI is an [extensible](https://docs.openwebui.com/features/plugin/), feature-rich, and user-friendly self-hosted AI platform designed to operate entirely offline.** It supports various LLM runners like Ollama and OpenAI-compatible APIs, with built-in embedding model inference engine for RAG, making it a powerful AI deployment solution.
+**Open WebUI is an [extensible](https://docs.openwebui.com/features/plugin/), feature-rich, and user-friendly self-hosted AI platform designed to operate entirely offline.** It supports various LLM runners like **Ollama** and **OpenAI-compatible APIs**, with **built-in inference engine** for RAG, making it a **powerful AI deployment solution**.
 
 ![GitHub stars](https://img.shields.io/github/stars/open-webui/open-webui?style=social)
 ![GitHub forks](https://img.shields.io/github/forks/open-webui/open-webui?style=social)
