--- a/docs/mission.mdx
+++ b/docs/mission.mdx
@@ -7,6 +7,12 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 <TopBanners />
 
+### A Note from Our Founder  
+
+Before diving into our mission, we invite you to read our founder's blog post: ["Why I’m Building Open WebUI"](https://jryng.com/thoughts/why-open-webui). In this post, Tim shares the inspiration, challenges, and hopes driving Open WebUI's vision forward. It's a heartfelt introduction to what we're all about!
+
+---
+
 Hello there! 👋
 
 Imagine a world where local, open models that can run on any machine, united as one, outperform proprietary giants like GPT-4. Even better, imagine us all having the capability to train and reproduce state-of-the-art models like GPT-4 or GPT-5 from scratch, using high-quality, curated data.
