--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -138,6 +138,9 @@ After installing, visit:
 
 You are now ready to start using OpenWebUI!
 
+## Using OpenWebUI with Ollama
+If you're using OpenWebUI with Ollama, be sure to check out our [Starting with Ollama Guide](/getting-started/quick-start/starting-with-ollama) to learn how to manage your Ollama instances with Open WebUI.
+
 ## Join the Community
 
 Need help? Have questions? Join our community:
