--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -68,6 +68,14 @@ Choose your preferred installation method below:
   </TabItem>
   <TabItem value="python" label="Python">
     <Tabs>
+      {/* <TabItem value="uvx" label="uvx">
+        <div className='mt-5'>
+          <Uvx />
+        </div>
+        <PythonUpdating />
+      </TabItem> */}
+
+
       <TabItem value="conda" label="Conda">
         <div className='mt-5'>
           <Conda />
