--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -95,7 +95,7 @@ docker run -d --name watchtower --restart unless-stopped -v /var/run/docker.sock
 
 ## Manual Installation
 
-### Installation with `uvx`
+{/* ### Installation with `uvx`
 It is highly recommended to use **`uv`**, a Python runtime manager, to ensure seamless Python environment management and avoid conflicts. Using `uv` is especially helpful when running multiple Python projects with different dependencies.
 
 #### Install `uv`:
@@ -122,7 +122,7 @@ This command will:
 2. Install Open WebUI along with its necessary dependencies.
 3. Start the Open WebUI server.
 
-After running this command, Open WebUI will be served at [http://localhost:8080](http://localhost:8080). Enjoy! 😄
+After running this command, Open WebUI will be served at [http://localhost:8080](http://localhost:8080). Enjoy! 😄 */}
 
 ### Installation with `pip`
 
