--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -15,6 +15,7 @@ import DockerUpdating from './tab-docker/DockerUpdating.md';
 import Helm from './tab-kubernetes/Helm.md';
 import Kustomize from './tab-kubernetes/Kustomize.md';
 import Venv from './tab-python/Venv.md';
+import Uv from './tab-python/Uv.md';
 import Conda from './tab-python/Conda.md';
 import PythonUpdating from './tab-python/PythonUpdating.md';
 
@@ -68,12 +69,12 @@ Choose your preferred installation method below:
   </TabItem>
   <TabItem value="python" label="Python">
     <Tabs>
-      {/* <TabItem value="uvx" label="uvx">
+      <TabItem value="uv" label="uv">
         <div className='mt-5'>
-          <Uvx />
+          <Uv />
         </div>
         <PythonUpdating />
-      </TabItem> */}
+      </TabItem>
 
 
       <TabItem value="conda" label="Conda">
