--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -121,13 +121,15 @@ Once `uv` is installed, running Open WebUI is a breeze. Use the command below, e
 
 - **macOS/Linux**:  
   ```bash
-  DATA_DIR=~/.open-webui uvx --python 3.11 open-webui serve
+  DATA_DIR=~/.open-webui uvx --python 3.11 open-webui@latest serve
   ```
 
 - **Windows**:  
   ```powershell
-  $env:DATA_DIR="C:\open-webui\data"; uvx --python 3.11 open-webui serve
+  $env:DATA_DIR="C:\open-webui\data"; uvx --python 3.11 open-webui@latest serve
   ```
+
+
 
 ### Installation with `pip`
 
