--- a/docs/troubleshooting/password-reset.mdx
+++ b/docs/troubleshooting/password-reset.mdx
@@ -84,6 +84,47 @@ _If you have issues with the above._  I had issues chaining the `bash` commands 
         UPDATE auth SET password='HASH' WHERE email='admin@example.com';
         -- exit sqlite: [Ctrl + d]
         ```
+## Nuking All the Data
+
+If you want to **completely reset** Open WebUI—including all user data, settings, and passwords—follow these steps to remove the `webui.db` file.
+
+### Step 1: Locate `webui.db` in Your Python Environment
+
+If you’re unsure where `webui.db` is located (especially if you're using a virtual environment), you can find out by following these steps:
+
+1. Activate your virtual environment (if applicable).
+2. Open a Python shell:
+   python
+
+3. Run the following code inside the Python shell:
+```
+   import os
+   import open_webui
+
+   # Show where the Open WebUI package is installed
+   print("Open WebUI is installed at:", open_webui.__file__)
+
+   # Construct a potential path to webui.db (commonly located in 'data/webui.db')
+   db_path = os.path.join(os.path.dirname(open_webui.__file__), "data", "webui.db")
+   print("Potential path to webui.db:", db_path)
+
+   # Check if webui.db exists at that path
+   if os.path.exists(db_path):
+       print("webui.db found at:", db_path)
+   else:
+       print("webui.db not found at:", db_path)
+```
+4. Examine the output:
+   - If the file is found, you’ll see its exact path.
+   - If not, you may need to perform a broader filesystem search (e.g., using `find` on Linux or a global file search on Windows/Mac).
+
+### Step 2: Delete `webui.db`
+
+Once you’ve located the file, remove it using a command similar to:
+```
+   rm -rf /path/to/your/python/environment/lib/pythonX.X/site-packages/open_webui/data/webui.db
+```
+**Warning:** Deleting `webui.db` will remove all stored data, including user accounts, settings, and passwords. Only do this if you truly want to start fresh!
 
         
 ---
