--- a/docs/pipelines/index.mdx
+++ b/docs/pipelines/index.mdx
@@ -5,7 +5,7 @@ title: "⚡ Pipelines"
 
 <p align="center">
   <a href="#">
-    <img src="/img/pipelines/header.png" alt="Pipelines Logo" />
+    <img src="/images/pipelines/header.png" alt="Pipelines Logo" />
   </a>
 </p>
 
@@ -37,7 +37,7 @@ Welcome to **Pipelines**, an [Open WebUI](https://github.com/open-webui) initiat
 
 <p align="center">
   <a href="#">
-    <img src="/img/pipelines/workflow.png" alt="Pipelines Workflow" />
+    <img src="/images/pipelines/workflow.png" alt="Pipelines Workflow" />
   </a>
 </p>
 
