--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -24,7 +24,7 @@ import { SponsorList } from "@site/src/components/SponsorList";
 [![Discord](https://img.shields.io/badge/Discord-Open_WebUI-blue?logo=discord&logoColor=white)](https://discord.gg/5rJgQTnV4s)
 [![](https://img.shields.io/static/v1?label=Sponsor&message=%E2%9D%A4&logo=GitHub&color=%23fe8e86)](https://github.com/sponsors/tjbck)
 
-![Open WebUI Demo](/img/demo.gif)
+![Open WebUI Demo](/images/demo.gif)
 
 
 ## Quick Start with Docker 🐳
