--- a/docs/getting-started/updating.mdx
+++ b/docs/getting-started/updating.mdx
@@ -108,4 +108,13 @@ The data is stored in a Docker volume named `open-webui`. The path to the volume
 docker volume inspect open-webui
 ```
 
-This will show you the details of the volume, including the mountpoint, which is usually located in `/var/lib/docker/volumes/open-webui/_data`.
+This will show you the details of the volume, including the mountpoint, which is usually located in `/var/lib/docker/volumes/open-webui/_data`.  
+
+On Windows 10 + WSL 2, Docker volumes are located here (type in the Windows file explorer): 
+- \\\wsl$\docker-desktop\mnt\docker-desktop-disk\data\docker\volumes
+
+For older versions of Docker (pre-Docker v26.1.4):
+- \\\wsl$\docker-desktop-data\data\docker\volumes
+- \\\wsl$\docker-desktop-data\version-pack-data\community\docker\volumes
+
+_(Windows answer credit to StackOverflow user sarye-haddadi; [link to original SO post](https://stackoverflow.com/questions/43181654/locating-data-volumes-in-docker-desktop-windows))_
