--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -161,6 +161,12 @@ pip install --upgrade open-webui
 
 This method installs all necessary dependencies and starts Open WebUI, allowing for a simple and efficient setup. After installation, you can access Open WebUI at [http://localhost:8080](http://localhost:8080). Enjoy! 😄
 
+### One-Click Deployment Options
+
+<a href="https://repocloud.io/details/?app_id=271">
+  <img src="https://d16t0pc4846x52.cloudfront.net/deploylobe.svg" alt="Deploy OpenWeb UI at RepoCloud">
+</a>
+
 ## Other Installation Methods
 
 We offer various installation alternatives, including non-Docker native installation methods, Docker Compose, Kustomize, and Helm. Visit our [Open WebUI Documentation](https://docs.openwebui.com/getting-started/) or join our [Discord community](https://discord.gg/5rJgQTnV4s) for comprehensive guidance.
