added LynxHub as third party installation

--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -130,6 +130,24 @@ Choose your preferred installation method below:
 
         Support for this installation method is provided through their website.
       </TabItem>
+      <TabItem value="lynxhub" label="LynxHub">
+        ## Install with LynxHub
+          Follow these steps to install Open WebUI in LynxHub
+          1. Install [**LynxHub**](https://github.com/KindaBrazy/LynxHub)
+          2. In the app search for **Open WebUI** and install
+          3. Press ▶️ button to start
+        ## Manage Environment Variable
+          You can manage **Environment Variable** by these steps:
+                - Click on **three dots** to open menu then **Launch Config**
+                - Click on **+** icon and add your desire environment variable
+                - **Save**
+        ## Update
+          The App will check for updates **automatically**, for manual checking:
+          - Open **three dots** Menu
+          - Click **Check for Updates**
+          - Click **Update** to start updating.
+
+      </TabItem>
     </Tabs>
 
     ### Additional Third-Party Integrations
