--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -10,6 +10,7 @@ In the rapidly advancing AI landscape, staying ahead isn't just a competitive ad
 **NASA, the Canadian Government, the Dutch Government, IBM, LG, and top academic institutions** trust Open WebUI to power their AI-driven initiatives. With its **modular architecture, continuous innovation, and enterprise-grade features**, it’s the **rational choice** for businesses that refuse to fall behind.  
 
 ![users](/images/enterprise/users.png)
+<sub className=" text-xs">*Open WebUI is used by developers from the mentioned organizations and institutions.*</sub>
 
 ---
 
